Added support to run the example as a desktop application