@@ -110,6 +110,25 @@ configure([project(':example')]) {
     compile project(':core')
     compile 'org.controlsfx:controlsfx:11.0.1'
   }
+
+  compileJava {
+    doFirst {
+      options.compilerArgs = [
+              '--module-path', classpath.asPath,
+              '--add-modules', 'javafx.fxml,javafx.controls'
+      ]
+    }
+  }
+
+  run {
+    doFirst {
+      jvmArgs = [
+              '--module-path', classpath.asPath,
+              '--add-modules', 'javafx.fxml,javafx.controls'
+      ]
+    }
+  }
+
   jpro {
     openingPath = "/"
   }
